--- a/odt_tvp_v2/views/diseno.xml
+++ b/odt_tvp_v2/views/diseno.xml
@@ -246,6 +246,7 @@
                                 </page>
                             </group> 
                             <group>
+                              <field name="observation_design"/>
                               <field name="diseño_creatividad"/>
                               <field name="firma1_design" widget="signature"/>
                               <field name="firma2_design" widget="signature"/>
