--- a/odt_tvp_v2/views/contact.xml
+++ b/odt_tvp_v2/views/contact.xml
@@ -202,7 +202,8 @@
                             </group>
 
                             <group string="Teléfono" attrs="{'invisible': [('cc_telefono','=',False)]}">
-                              <field name="tipo_servicio1"/>                            
+                              <field name="tipo_servicio1"/>
+                              <field name="station_number1"/>
                               <field name="dictaminacion1" attrs="{'invisible':[('tipo_servicio1','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio1','=','5')]}">
                                 <field name="lunes1"/> 
@@ -220,6 +221,7 @@
 
                             <group string="WhatsApp" attrs="{'invisible': [('cc_whats','=',False)]}">
                               <field name="tipo_servicio2"/>
+                              <field name="station_number2"/>
                               <field name="dictaminacion2" attrs="{'invisible':[('tipo_servicio2','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio2','=','5')]}">
                                 <field name="lunes2"/> 
@@ -237,6 +239,7 @@
 
                             <group string="E-mail" attrs="{'invisible': [('cc_email','=',False)]}">
                               <field name="tipo_servicio3"/>
+                              <field name="station_number3"/>
                               <field name="dictaminacion3" attrs="{'invisible':[('tipo_servicio3','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio3','=','5')]}">
                                 <field name="lunes3"/> 
@@ -254,6 +257,7 @@
 
                             <group string="Twitter" attrs="{'invisible': [('cc_twitter','=',False)]}">
                               <field name="tipo_servicio4"/>
+                              <field name="station_number4"/>
                               <field name="dictaminacion4" attrs="{'invisible':[('tipo_servicio4','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio4','=','5')]}">
                                 <field name="lunes4"/>
@@ -271,6 +275,7 @@
 
                             <group string="Facebook" attrs="{'invisible': [('cc_face','=',False)]}">
                               <field name="tipo_servicio5"/>
+                              <field name="station_number5"/>
                               <field name="dictaminacion5" attrs="{'invisible':[('tipo_servicio5','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio5','=','5')]}">
                                 <field name="lunes5"/> 
@@ -288,6 +293,7 @@
 
                             <group string="Chat" attrs="{'invisible': [('cc_chat','=',False)]}">
                               <field name="tipo_servicio6"/>
+                              <field name="station_number6"/>
                               <field name="dictaminacion6" attrs="{'invisible':[('tipo_servicio6','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio6','=','5')]}">
                                 <field name="lunes6"/> 
@@ -305,6 +311,7 @@
 
                             <group string="Escritorio" attrs="{'invisible': [('cc_escritorio','=',False)]}">
                               <field name="tipo_servicio7"/>
+                              <field name="station_number7"/>
                               <field name="dictaminacion7" attrs="{'invisible':[('tipo_servicio7','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio7','=','5')]}">
                                 <field name="lunes7"/>
@@ -322,6 +329,7 @@
 
                             <group string="Otro" attrs="{'invisible': [('cc_otro','=',False)]}">
                               <field name="tipo_servicio8"/>
+                              <field name="station_number8"/>
                               <field name="dictaminacion8" attrs="{'invisible':[('tipo_servicio8','!=','5')]}"/>
                               <group attrs="{'invisible':[('tipo_servicio8','=','5')]}">
                                 <field name="lunes8"/> 
