--- a/odt_tvp_v2/views/diseno.xml
+++ b/odt_tvp_v2/views/diseno.xml
@@ -237,7 +237,7 @@
                                     <group>
                                       <group class="oe_subtotal_footer oe_right" name="totales">
                                         <field name="total_cliente_diseno" class="oe_subtotal_footer_separator" readonly="1"/>
-                                        <field name="total_gtvo_diseno" class="oe_subtotal_footer_separator" readonly="1"/>
+                                        <!--<field name="total_gtvo_diseno" class="oe_subtotal_footer_separator" readonly="1"/>-->
                                         <field name="total_terceros_diseno" class="oe_subtotal_footer_separator" readonly="1"/>
                                         <field name="total_interno_diseno" class="oe_subtotal_footer_separator" readonly="1"/>
                                         <field name="total_recuperacion_diseno" class="oe_subtotal_footer_separator" readonly="1"/>
