Se insertan los campos dentro de las vistas

--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -107,6 +107,8 @@
                   <field name="medios_tercero"/>
                   <field name="gestoria_tercero"/>
                   <field name="digital_tercero"/>
+                  <field name="awards"/>
+                  <field name="taxes"/>
                 </group>
               </group>
             </page>
