Campos en control presupuestal de totales

--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -371,6 +371,7 @@
                           <field name="logistica"/>
                           <field name="estrategia"/>
                           <field name="otros_gastos"/>
+                          <field name="total_areas"/>
                       </group>
                       <group string="Gastos 3ros Aprobados">
                         <field name="btl_tercero"/>
@@ -382,7 +383,16 @@
                         <field name="medios_tercero"/>
                         <field name="logistica_tercero"/>
                         <field name="estrategia_tercero"/>
+                        <field name="total_tercero"/>
+                        <field name="awards"/>
+                        <field name="taxes"/>
                       </group>
+
+
+
+
+
+
                       <group name="ingresos">
                             <page name="cotizacion_interna_diseno" string="Cotizacion">
                                 <field name="tabla_gastos" widget="one2many_list">
