Fix problema con id

--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -352,6 +352,7 @@
                   <page name="finanzas" string="Control Presupuestal">
                     <group>
                       <group string="Planeado">
+                        <field name="ref_customer" invisible="1"/>
                         <field name="total_pagar"/>
                         <field name="total_expenses_approved"/>
                         <field name='u_bruta_p'/>
