--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -388,7 +388,7 @@
                         <field name="taxes"/>
                         <field name="otros_gastos"/>
                         <!--<field name="total_tercero"/>-->
-                        <field name="total_expenses_approved"/>
+                        <!--<field name="total_expenses_approved"/>-->
 
                       </group>
                       <group name="ingresos">
