--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -372,7 +372,7 @@
                           <field name='medios'/>
                           <field name="logistica"/>
                           <field name="estrategia"/>
-                          <!--<field name="total_areas"/>-->
+                          <field name="sub_total_areas"/>
                       </group>
                       <group string="Costos 3ros Aprobados">
                         <field name="btl_tercero"/>
@@ -387,8 +387,8 @@
                         <field name="awards"/>
                         <field name="taxes"/>
                         <field name="otros_gastos"/>
-                        <!--<field name="total_tercero"/>-->
-                        <!--<field name="total_expenses_approved"/>-->
+                        <field name="sub_total_tercero"/>
+
 
                       </group>
                       <group name="ingresos">
