--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -115,9 +115,8 @@
                                 <field name="team_id" widget="selection"/>
                                 <field name="start_date"/>
                                 <field name="end_date"/>
-                                <field name="med_fecha_entrega"/>
                                 <field name="analitica" domain="[('partner_id','=',partner_id)]"/>
-                                <!--field name="presupuesto_cliente"/-->
+                                <field name="presupuesto_cliente"/>
                                 <field name="medios"/>
                                 <field name="med_tipo_trabajo"  widget="radio" options="{'horizontal': true}"/>
                                 <div attrs="{'invisible':[('med_tipo_trabajo','!=','1')]}">
@@ -125,11 +124,11 @@
                                 </div>
                             </group>
                             <group>
-                                <!--field name="priority" widget="priority"/-->
+                                <field name="priority" widget="priority"/>
                                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
                                 <field name="marca"/>                               
-                                <!--field name="target"/-->
-                                <!--field name="project"/-->
+                                <field name="target"/>
+                                <field name="project"/>
                                 <field name="med_spot_tv_abierta" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_aaee_tv" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_spoteo_carriers" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
@@ -140,7 +139,7 @@
                                 <field name="med_prensa" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_ooh" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_digital" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
-                                <!--field name="med_analisis" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/-->
+                                <field name="med_analisis" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
 <!--                                   <field name="med_analisis" />
  -->                                <field name="lost_reason" invisible="1"/>
                                 <field name="date_conversion" invisible="1"/>
@@ -156,6 +155,7 @@
 <!--                               <field name="med_folio"/>
                               <field name="med_fecha_soli"/> -->
                               <!-- <field name="med_hora_soli"  widget="float_time"/> -->
+                              <field name="med_fecha_entrega"/>
                               <field name="med_fecha_real"/>
                               <!-- <field name="med_elabora"/> -->
                               <field name="med_nivel_complejidad"/>
