--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -124,11 +124,11 @@
                                 </div>
                             </group>
                             <group>
-                                <field name="priority" widget="priority"/ invisible="1">
+                                <field name="priority" widget="priority" invisible="1"/>
                                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
                                 <field name="marca"/>                               
-                                <field name="target"/>
-                                <field name="project"/>
+                                <field name="target" invisible="1"/>
+                                <field name="project" invisible="1"/>
                                 <field name="med_spot_tv_abierta" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_aaee_tv" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
                                 <field name="med_spoteo_carriers" attrs="{'invisible':[('med_tipo_trabajo','!=','3')]}"/>
