--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -656,10 +656,10 @@
                           <group>
                             <group>
                               <field name="tip_analisis"/>
-                              <field name="an_inversion" attrs="{'invisible': [('tip_analisis','=',True)]}"/>
-                              <field name="an_habitos"   attrs="{'invisible': [('tip_analisis','=',True)]}"/>
-                              <field name="an_audiencia" attrs="{'invisible': [('tip_analisis','=',True)]}"/>
-                              <field name="an_otro"      attrs="{'invisible': [('tip_analisis','=',True)]}"/>
+                              <field name="an_inversion" attrs="{'invisible': [('tip_analisis','=',False)]}"/>
+                              <field name="an_habitos"   attrs="{'invisible': [('tip_analisis','=',False)]}"/>
+                              <field name="an_audiencia" attrs="{'invisible': [('tip_analisis','=',False)]}"/>
+                              <field name="an_otro"      attrs="{'invisible': [('tip_analisis','=',False)]}"/>
                             </group>
                             <group>
                               <field name="an_marca"/>
@@ -667,14 +667,14 @@
                               <field name="an_categoria" attrs="{'invisible': [('med_analisis','=',False)]}"/>
                               <field name="an_cat_otros" invisible="1"/>
                             </group>
-                            <group string="Inversión Publicitaria (Competencia) IBOPE" attrs="{'invisible': [('an_inversion','=',True)]}">
+                            <group string="Inversión Publicitaria (Competencia) IBOPE" attrs="{'invisible': [('an_inversion','=',False)]}">
                               <h3>Periodo*</h3>
                               <field name="an_year_inmediato"/>
                               <field name="an_year_movil"/>
                               <field name="an_periodo"/>
                               <field name="an_analisis"/>
                             </group>
-                            <group string='Audiencias' attrs="{'invisible': [('an_audiencia','=',True)]}">
+                            <group string='Audiencias' attrs="{'invisible': [('an_audiencia','=',False)]}">
                               <h3>Periodo*</h3>
                               <field name="an_year_inmediato1"/>
                               <field name="an_year_movil1"/>
@@ -682,12 +682,12 @@
                               <field name="an_target_interes"/>
                               <field name="an_analisis1"/>
                             </group>
-                            <group string="Hábitos de consumo (BIMSA)" attrs="{'invisible': [('an_habitos','=',True)]}">
+                            <group string="Hábitos de consumo (BIMSA)" attrs="{'invisible': [('an_habitos','=',False)]}">
                               <field name="an_marca1"/>
                               <field name="an_target_interes1"/>
                               <field name="an_analisis2"/>
                             </group>
-                            <group string="Otro Analisis" attrs="{'invisible': [('an_otro','=',True)]}">
+                            <group string="Otro Analisis" attrs="{'invisible': [('an_otro','=',False)]}">
                               <field name="an_tro_descripcion"/> 
                             </group>
                           </group>
