--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -506,13 +506,13 @@
                           </group>
                           <group>
                               <page name="cotizacion_interna_diseno" string="Cotizacion">
-                                  <field name="tabla_medios_revista" widget="one2many_list">
+                                  <field name="tabla_medios_revista"  >
                                     <tree editable="bottom">
                                         <field name="titulo"/>
-                                        <field name="tipo_revist"/>
-                                        <field name="tamano" attrs="{'readonly' :[('tipo_revist','!=','1')]}"/>
+                                        <field name="tipo_revista"/>
+                                        <field name="tamano" attrs="{'readonly' :[('tipo_revista','!=','1')]}"/>
                                         <field name="otro" attrs="{'readonly' : [('tamano','!=','6')]}"/>
-                                        <field name="tipo" attrs="{'readonly' : [('tipo_revist','!=','2')]}"/>
+                                        <field name="tipo" attrs="{'readonly' : [('tipo_revista','!=','2')]}"/>
                                         <field name="otro_tipo" attrs="{'readonly' : [('tipo','!=','6')]}"/>
                                         <field name="color" invisible="1"/>
                                     </tree>
